syntax = "proto3";

package org.ostelco.prime.metrics.api;

option java_multiple_files = true;
option java_package = "org.ostelco.prime.metrics.api";

// This is used to report Analytics events from OCSgw to Prime

service OcsgwAnalyticsService {
    rpc OcsgwAnalyticsEvent (stream OcsgwAnalyticsReport) returns (OcsgwAnalyticsReply) {}
}

message OcsgwAnalyticsReport {
    uint32 activeSessions = 1;
    repeated User users = 2;
    bool keepAlive = 3;
}

message User {
    string msisdn = 1;
    string apn = 2;
    string mnc_mcc = 3;
}

message OcsgwAnalyticsReply {
}